Updated debugger watches
- added editing of watched address and string length to MemoryWatchesModel
- debug window now provides context menu for watches widget that enables user configuration of watches, removal of watches, etc.
- added abstract base class for int watches to make configuring watches of different int sizes possible (e.g. set base, byte order)
- IntegerMemoryWatch template class now inherits new abstract base class
- string watches can now switch between ASCII/Spectrum charset
- added model/view delegate to enable editing of watch addresses with hex spin box
- added size() virtual method to memory watch base class
- added copy icon to resources

--- a/src/spectrum/qtui/icons.qrc
+++ b/src/spectrum/qtui/icons.qrc
@@ -11,6 +11,7 @@
     <file alias="save">../icons/save-dark.svg</file>
     <file alias="quit">../icons/quit-dark.svg</file>
     <file alias="screenshot">../icons/screenshot-dark.svg</file>
+    <file alias="copy">../icons/copy-dark.svg</file>
     <file alias="clear">../icons/clear-dark.svg</file>
     <file alias="remove">../icons/remove-dark.svg</file>
     <file alias="breakpoint">../icons/breakpoint-dark.svg</file>
@@ -27,6 +28,7 @@
     <file alias="save">../icons/save-light.svg</file>
     <file alias="quit">../icons/quit-light.svg</file>
     <file alias="screenshot">../icons/screenshot-light.svg</file>
+    <file alias="copy">../icons/copy-light.svg</file>
     <file alias="clear">../icons/clear-light.svg</file>
     <file alias="remove">../icons/remove-light.svg</file>
     <file alias="breakpoint">../icons/breakpoint-light.svg</file>
